--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <spring-cloud.version>Hoxton.SR4</spring-cloud.version>
 		<spring-boot-admin.version>2.2.3</spring-boot-admin.version>
         <spring-boot.mybatis>2.1.2</spring-boot.mybatis>
+        <nacos.version>1.3.0</nacos.version>
         <swagger.fox.version>2.9.2</swagger.fox.version>
         <swagger.core.version>1.5.24</swagger.core.version>
         <kaptcha.version>2.3.2</kaptcha.version>
@@ -54,6 +55,13 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+
+			<!-- Alibaba Nacos 配置 -->
+			<dependency>
+			    <groupId>com.alibaba.nacos</groupId>
+			    <artifactId>nacos-client</artifactId>
+			    <version>${nacos.version}</version>
+			</dependency>
 
             <!-- SpringBoot 依赖配置 -->
             <dependency>
