--- a/pom.xml
+++ b/pom.xml
@@ -17,11 +17,11 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
-        <spring-boot.version>2.2.6.RELEASE</spring-boot.version>
-        <spring-cloud.version>Hoxton.SR4</spring-cloud.version>
-		<spring-boot-admin.version>2.2.3</spring-boot-admin.version>
+        <spring-boot.version>2.3.4.RELEASE</spring-boot.version>
+        <spring-cloud.version>Hoxton.SR8</spring-cloud.version>
+        <spring-cloud-alibaba.version>2.2.3.RELEASE</spring-cloud-alibaba.version>
+		<spring-boot-admin.version>2.3.0</spring-boot-admin.version>
         <spring-boot.mybatis>2.1.2</spring-boot.mybatis>
-        <nacos.version>1.3.0</nacos.version>
         <swagger.fox.version>2.9.2</swagger.fox.version>
         <swagger.core.version>1.5.24</swagger.core.version>
         <kaptcha.version>2.3.2</kaptcha.version>
@@ -51,17 +51,10 @@
             <dependency>
                 <groupId>com.alibaba.cloud</groupId>
                 <artifactId>spring-cloud-alibaba-dependencies</artifactId>
-                <version>2.2.1.RELEASE</version>
+                <version>${spring-cloud-alibaba.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
-
-			<!-- Alibaba Nacos 配置 -->
-			<dependency>
-			    <groupId>com.alibaba.nacos</groupId>
-			    <artifactId>nacos-client</artifactId>
-			    <version>${nacos.version}</version>
-			</dependency>
 
             <!-- SpringBoot 依赖配置 -->
             <dependency>
