新增文件服务应用

--- a/ruoyi-modules/pom.xml
+++ b/ruoyi-modules/pom.xml
@@ -12,6 +12,7 @@
         <module>ruoyi-system</module>
         <module>ruoyi-gen</module>
         <module>ruoyi-job</module>
+        <module>ruoyi-file</module>
     </modules>
 
     <artifactId>ruoyi-modules</artifactId>
