--- a/ruoyi-modules/ruoyi-system/pom.xml
+++ b/ruoyi-modules/ruoyi-system/pom.xml
@@ -54,34 +54,22 @@
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
         
-        <!-- Ruoyi Common Security -->
-        <dependency>
-            <groupId>com.ruoyi</groupId>
-            <artifactId>ruoyi-common-security</artifactId>
-        </dependency>
-        
-        <!-- Ruoyi Common Datascope -->
+        <!-- RuoYi Common Datascope -->
         <dependency>
             <groupId>com.ruoyi</groupId>
             <artifactId>ruoyi-common-datascope</artifactId>
         </dependency>
         
-        <!-- Ruoyi Common Log -->
+        <!-- RuoYi Common Log -->
         <dependency>
             <groupId>com.ruoyi</groupId>
             <artifactId>ruoyi-common-log</artifactId>
         </dependency>
         
-        <!-- Ruoyi Common Swagger -->
+        <!-- RuoYi Common Swagger -->
         <dependency>
             <groupId>com.ruoyi</groupId>
             <artifactId>ruoyi-common-swagger</artifactId>
-        </dependency>
-        
-        <!-- RuoYi Common Redis-->
-        <dependency>
-            <groupId>com.ruoyi</groupId>
-            <artifactId>ruoyi-common-redis</artifactId>
         </dependency>
 
     </dependencies>
