增加分布式文件Minio支持

--- a/ruoyi-modules/ruoyi-file/pom.xml
+++ b/ruoyi-modules/ruoyi-file/pom.xml
@@ -54,6 +54,13 @@
             <artifactId>fastdfs-client</artifactId>
         </dependency>
         
+        <!-- Minio -->
+        <dependency>
+            <groupId>io.minio</groupId>
+            <artifactId>minio</artifactId>
+            <version>${minio.version}</version>
+        </dependency>
+        
         <!-- RuoYi Api System -->
         <dependency>
             <groupId>com.ruoyi</groupId>
