--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
         <commons.fileupload.version>1.3.3</commons.fileupload.version>
         <velocity.version>1.7</velocity.version>
         <fastjson.version>1.2.74</fastjson.version>
+        <minio.version>8.0.3</minio.version>
 		<poi.version>4.1.2</poi.version>
         <common-pool.version>2.6.2</common-pool.version>
     </properties>
