添加启动执行脚本

--- a/ruoyi-auth/pom.xml
+++ b/ruoyi-auth/pom.xml
@@ -61,6 +61,7 @@
     </dependencies>
 	
     <build>
+        <finalName>${project.artifactId}</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
