--- a/ruoyi-modules/ruoyi-gen/pom.xml
+++ b/ruoyi-modules/ruoyi-gen/pom.xml
@@ -54,6 +54,12 @@
             <artifactId>velocity</artifactId>
         </dependency>
         
+        <!-- Commons Collections -->
+        <dependency> 
+            <groupId>commons-collections</groupId> 
+            <artifactId>commons-collections</artifactId> 
+        </dependency>
+        
         <!-- Mysql Connector -->
         <dependency>
             <groupId>mysql</groupId>
