--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
 		<poi.version>4.1.2</poi.version>
         <common-pool.version>2.6.2</common-pool.version>
         <commons-collections.version>3.2.2</commons-collections.version>
+        <hutool.version>5.7.1</hutool.version>
     </properties>
 
     <!-- 依赖声明 -->
@@ -180,6 +181,12 @@
                 <version>${common-pool.version}</version>
             </dependency>
 
+            <dependency>
+                <groupId>cn.hutool</groupId>
+                <artifactId>hutool-all</artifactId>
+                <version>${hutool.version}</version>
+            </dependency>
+
             <!-- 核心模块 -->
 	        <dependency>
                 <groupId>com.ruoyi</groupId>
@@ -270,5 +277,30 @@
             </plugin>
         </plugins>
     </build>
+
+    <repositories>
+        <repository>
+            <id>public</id>
+            <name>aliyun nexus</name>
+            <url>http://maven.aliyun.com/nexus/content/groups/public/</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+        </repository>
+    </repositories>
+
+    <pluginRepositories>
+        <pluginRepository>
+            <id>public</id>
+            <name>aliyun nexus</name>
+            <url>http://maven.aliyun.com/nexus/content/groups/public/</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </pluginRepository>
+    </pluginRepositories>
 
 </project>
