--- a/ruoyi-gateway/src/main/resources/bootstrap.yml
+++ b/ruoyi-gateway/src/main/resources/bootstrap.yml
@@ -9,34 +9,45 @@ spring:
     name: ruoyi-gateway
   profiles:
     # 环境配置
-    active: dev
+    active: @profiles.active@
   main:
     allow-bean-definition-overriding: true
+
+--- # nacos 配置
+spring:
   cloud:
     nacos:
       discovery:
         # 服务注册地址
-        server-addr: 127.0.0.1:8848
+        server-addr: @nacos.server@
+        # 注册组
+        group: @nacos.discovery.group@
       config:
         # 配置中心地址
-        server-addr: 127.0.0.1:8848
+        server-addr: @nacos.server@
+        # 配置组
+        group: @nacos.config.group@
         # 配置文件格式
         file-extension: yml
         # 共享配置
         shared-configs:
           - application-${spring.profiles.active}.${spring.cloud.nacos.config.file-extension}
+
+--- # sentinel 配置
+spring:
+  cloud:
     sentinel:
       # 取消控制台懒加载
       eager: true
       transport:
         # 控制台地址
-        dashboard: 127.0.0.1:8718
+        dashboard: @sentinel.server@
       # nacos配置持久化
       datasource:
         ds1:
           nacos:
-            server-addr: 127.0.0.1:8848
+            server-addr: @nacos.server@
             dataId: sentinel-ruoyi-gateway
-            groupId: DEFAULT_GROUP
+            groupId: @nacos.config.group@
             data-type: json
             rule-type: flow
