--- a/ruoyi-ui/package.json
+++ b/ruoyi-ui/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "ruoyi",
-  "version": "3.3.0",
-  "description": "若依管理系统",
-  "author": "若依",
+  "name": "ruoyi-cloud-plus",
+  "version": "0.1.0",
+  "description": "RuoYi-Cloud-Plus后台管理系统",
+  "author": "Lion Li",
   "license": "MIT",
   "scripts": {
     "dev": "vue-cli-service serve",
