--- a/ruoyi-gateway/src/main/resources/bootstrap.yml
+++ b/ruoyi-gateway/src/main/resources/bootstrap.yml
@@ -10,27 +10,24 @@ spring:
   profiles:
     # 环境配置
     active: @profiles.active@
-  main:
-    allow-bean-definition-overriding: true
 
 --- # nacos 配置
 spring:
   cloud:
     nacos:
+      # nacos 服务地址
+      server-addr: @nacos.server@
       discovery:
-        # 服务注册地址
-        server-addr: @nacos.server@
         # 注册组
         group: @nacos.discovery.group@
       config:
-        # 配置中心地址
-        server-addr: @nacos.server@
         # 配置组
         group: @nacos.config.group@
         # 配置文件格式
         file-extension: yml
         # 共享配置
         shared-configs:
+          - application.${spring.cloud.nacos.config.file-extension}
           - application-${spring.profiles.active}.${spring.cloud.nacos.config.file-extension}
 
 --- # sentinel 配置
@@ -46,8 +43,8 @@ spring:
       datasource:
         ds1:
           nacos:
-            server-addr: @nacos.server@
-            dataId: sentinel-ruoyi-gateway
-            groupId: @nacos.config.group@
+            server-addr: ${spring.cloud.nacos.server-addr}
+            dataId: sentinel-${spring.application.name}
+            groupId: ${spring.cloud.nacos.config.group}
             data-type: json
             rule-type: flow
