--- a/ruoyi-modules/ruoyi-file/pom.xml
+++ b/ruoyi-modules/ruoyi-file/pom.xml
@@ -9,10 +9,10 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>ruoyi-modules-file</artifactId>
+    <artifactId>ruoyi-file</artifactId>
 
     <description>
-        ruoyi-modules-file文件服务
+        ruoyi-file文件服务
     </description>
 
     <dependencies>
