--- a/ruoyi-modules/ruoyi-gen/pom.xml
+++ b/ruoyi-modules/ruoyi-gen/pom.xml
@@ -9,10 +9,10 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>ruoyi-modules-gen</artifactId>
+    <artifactId>ruoyi-gen</artifactId>
 
     <description>
-        ruoyi-modules-gen代码生成
+        ruoyi-gen代码生成
     </description>
 
     <dependencies>
