--- a/ruoyi-auth/pom.xml
+++ b/ruoyi-auth/pom.xml
@@ -50,6 +50,11 @@
             <groupId>com.ruoyi</groupId>
             <artifactId>ruoyi-common-web</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.ruoyi</groupId>
+            <artifactId>ruoyi-common-dubbo</artifactId>
+        </dependency>
         
     </dependencies>
 	
