--- a/ruoyi-common/pom.xml
+++ b/ruoyi-common/pom.xml
@@ -17,6 +17,7 @@
         <module>ruoyi-common-datascope</module>
 		<module>ruoyi-common-datasource</module>
         <module>ruoyi-common-web</module>
+        <module>ruoyi-common-dubbo</module>
     </modules>
 
     <artifactId>ruoyi-common</artifactId>
