--- a/ruoyi-api/pom.xml
+++ b/ruoyi-api/pom.xml
@@ -10,6 +10,7 @@
 
     <modules>
         <module>ruoyi-api-system</module>
+        <module>ruoyi-api-file</module>
     </modules>
 
     <artifactId>ruoyi-api</artifactId>
